This burger menu is going to take some doing. And why is my burger menu following my inner text div down, instead of hanging out with my outer text div??? So I tried vertical-align: top, and it pushed it down even farther!!! What is going on??? I mean, I'll try to fix it, but I wanted to preserve this absurd specimen of div whattery first.

--- a/cs100d/module4/app_prototype/app_prototype/src/index.css
+++ b/cs100d/module4/app_prototype/app_prototype/src/index.css
@@ -10,7 +10,6 @@ body {
 html { 
   width: 100%; 
   min-height: 100%; 
-  cursor:url(https://i.ibb.co/ZXJNKSv/smol-pancake.png), auto;
 } 
 
 body { 
@@ -27,13 +26,12 @@ body {
 }
 
 .Section1{
-  background-color:#778899;
-  color:#f0f8ff;
+  background-color:#f0f8ff;
   margin: 0px; 
-  padding: 50px; 
+  padding: 0px;
 }
 .Section1:hover {
-  background-color: #8090a1;
+  background-color: #f8ffff;
 }
 .Section2{
   background-color:#f0f8ff;
@@ -70,4 +68,62 @@ body {
 }
 .Section5:hover {
   background-color: #8090a1;
+}
+.Column1{
+  display:inline-block;
+  width:49vw;
+  background-color:#778899;
+  color:#f0f8ff;
+  height:100vh;
+  vertical-align:top;
+}
+.Column2{
+  display:inline-block;
+  width:49vw;
+  background-color:#f0f8ff;
+}
+.burger-menu{
+  display:inline-block;
+}
+.hamburger-button {
+  margin-left: 30px;
+  margin-top:30px;
+  font-size: 24px;
+  cursor: pointer;
+  background-color:#778899;
+  border:0px;
+  vertical-align:top;
+}
+.nav-links {
+  display: none;
+  background-color: #333;
+  color: white;
+}
+.nav-links a {
+  display: block;
+  padding: 15px;
+  color: white;
+  text-decoration: none;
+}
+.nav-links a:hover {
+  background-color: #111;
+}
+.outer-text{
+  display:inline-block;
+  margin-left:30px;
+  margin-top:30px;
+  background-color:pink;
+}
+.inner-text{
+  margin-top:100px;
+}
+.name{
+  font-size:30px;
+  line-height:20%;
+}
+.field{
+  font-size:16px;
+}
+.links{
+  font-size:12px;
 }
